syntax = "proto3";

package service.stats.rpc;

option java_package = "com.bxc.service.stats.rpc";
option java_multiple_files = true;

import "gethelloworld.proto";

service StatsService {
  rpc GetHelloWorldRpc(service.stats.rpc.GetHelloWorldRequest)
      returns (service.stats.rpc.GetHelloWorldResponse) {}
}